--- a/src/app/components/movie/view-movie/view-movie.component.html
+++ b/src/app/components/movie/view-movie/view-movie.component.html
@@ -1,5 +1,5 @@
 
-<div style="margin-left: 50px; margin-right: 50px;width: 350px;">
+<div style="margin-left: 50px; margin-right: 50px;">
 <form  [formGroup] = "searchForm" (ngSubmit)="submitSearch()">
   <h3>Search movie</h3>
   <div class="form-group">
